RESOLVED FIXED86544
[chromium] ScrollElasticityController.mm doesn't compile with the 10.6 SDK on mac
https://bugs.webkit.org/show_bug.cgi?id=86544
Summary [chromium] ScrollElasticityController.mm doesn't compile with the 10.6 SDK on...
Dirk Pranke
Reported 2012-05-15 16:28:33 PDT
[chromium] ScrollElasticityController.mm doesn't compile with the 10.6 SDK on mac
Attachments
Patch (1.71 KB, patch)
2012-05-15 16:30 PDT, Dirk Pranke
andersca: review+
Dirk Pranke
Comment 1 2012-05-15 16:30:33 PDT
Dirk Pranke
Comment 2 2012-05-18 15:07:33 PDT
this was fixed in r117182
Note You need to log in before you can comment on or make changes to this bug.