[chromium] ScrollElasticityController.mm doesn't compile with the 10.6 SDK on mac https://bugs.webkit.org/show_bug.cgi?id=86544

Reviewed by Anders Carlsson.

This is a build fix for now until we can figure out what a
better way to approach this is.

* platform/mac/ScrollElasticityController.mm:
(WebCore):

Canonical link: https://commits.webkit.org/104119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117182 268f45cc-cd09-0410-ab3c-d52691b4dbfc